--- a/Resources/Language/Portuguese.xaml
+++ b/Resources/Language/Portuguese.xaml
@@ -1,4 +1,4 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿ ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:system="clr-namespace:System;assembly=mscorlib">
 
@@ -9,6 +9,7 @@
     <!-- MainWindow Tabs -->
     <system:String x:Key="News">Notícias</system:String>
     <system:String x:Key="Assemblies">Assemblies</system:String>
+    <system:String x:Key="AssembliesDB">AssemblyDB</system:String>
 
     <!-- MainWindow Profile selector -->
     <system:String x:Key="DefaultProfile">Predeterminado</system:String>
@@ -20,6 +21,15 @@
     <system:String x:Key="ColumnLocation">Localização</system:String>
     <system:String x:Key="ColumnDescription">Descrição</system:String>
 
+    <!-- MainWindow Assemblies DB datagrid columns -->
+    <system:String x:Key="DBColumnName">Nome</system:String>
+    <system:String x:Key="DBColumnDescription">Descrição</system:String>
+    <system:String x:Key="DBColumnAuthor">Autor</system:String>
+    <system:String x:Key="DBColumnScore">Pontuação</system:String>
+
+    <!-- MainWindow Assemblies DB datagrid Menu -->
+    <system:String x:Key="InstallFromDB">Instalar</system:String>
+     
     <!-- MainWindow Assemblies datagrid Menu -->
     <system:String x:Key="MenuUpdateAndCompile">Atualizar e Compilar</system:String>
     <system:String x:Key="MenuRemove">Excluir</system:String>
@@ -67,7 +77,13 @@
     <system:String x:Key="Debug Console">Console do Desenvolvedor</system:String>
     <system:String x:Key="Display Enemy Tower Range">Mostrar o alcance das torres</system:String>
     <system:String x:Key="Extended Zoom">Zoom Extendido</system:String>
+    <system:String x:Key="Show Ping">Mostrar Ping</system:String>
+    <system:String x:Key="Show Drawings">Mostrar desanhos(Drawings)</system:String>
+    <system:String x:Key="Send Anonymous Assembly Statistics">Enviar estatística anónimas dos assemblies</system:String>
+    <system:String x:Key="Always Inject Default Profile">Injetar sempre o perfil predefinido(Default)</system:String>
     <system:String x:Key="UpdateOnStart">Atualizar os assemblies ao iniciar o programa</system:String>
+    <system:String x:Key="UpdateCoreOnInject">Atualizar core ao injetar</system:String>
+     
     <system:String x:Key="Inject">Injetar</system:String>
     <system:String x:Key="Logout">Sair</system:String>
     <system:String x:Key="DefaultHotkeys">Restaurar</system:String>
@@ -99,7 +115,7 @@
     <system:String x:Key="WrongAuth">Usuário ou senha errados. Registre-se em http://{0}</system:String>
     <system:String x:Key="AuthEmpty">Por favor introduza o usuário e senha.</system:String>
     <system:String x:Key="FailedToDelete">Não foi possível eliminar o ficheiro da atualização. Por favor reinicie o LeagueSharp.</system:String>
-    <system:String x:Key="WrongVersion">Versão do League Of Legends não suportada. Hash: </system:String>
+    <system:String x:Key="WrongVersion">Versão do League Of Legends não suportada. Hash:</system:String>
     <system:String x:Key="FailedToDownload">Erro na descarga.</system:String>
     <system:String x:Key="FailedToLogin">Erro ao iniciar sessão: {0}</system:String>
     <system:String x:Key="Login">Iniciar sessão</system:String>
@@ -134,5 +150,5 @@
     <system:String x:Key="UpdateSuccess">O LeagueSharp atualizou com sucesso para a versão do League of Legends instalado.</system:String>
     <system:String x:Key="UpdateUnknown">Não foi possível determinar se o LeagueSharp está atualizado para versão do League of Legends instalado, normalmente isto quer dizer que www.joduska.me está inacessível.</system:String>
     <system:String x:Key="NotUpdateNeeded">O LeagueSharp está atualizado para versão instalada do League of Legends.</system:String>
-    <system:String x:Key="RandomizationFailed">Could not randomize the dll names.</system:String>
+    <system:String x:Key="RandomizationFailed">Não foi possível dar um nome aleatório aos dll.</system:String>
 </ResourceDictionary>
