--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -213,8 +213,7 @@
             </TabControl.Resources>
             <TabItem x:Name="TosTabItem" Height="36" VerticalAlignment="Top" Visibility="Visible" IsHitTestVisible="False">
                 <Grid Background="#FFE5E5E5">
-                    <WebBrowser x:Name="TosBrowser" Visibility="Visible" Margin="10,10,10,32"
-                                Source="http://api.joduska.me/public/tos" />
+                    <WebBrowser x:Name="TosBrowser" Visibility="Visible" Margin="10,10,10,32" />
                     <Button Content="{DynamicResource AcceptTosButton}" HorizontalAlignment="Right" Margin="0,0,90,2"
                             VerticalAlignment="Bottom" Width="75" Click="TosAccept_Click" />
                     <Button Content="{DynamicResource DeclineTosButton}" Margin="0,0,10,2" HorizontalAlignment="Right"
@@ -236,8 +235,7 @@
                             </ContextMenu>
                         </tb:TaskbarIcon.ContextMenu>
                     </tb:TaskbarIcon>
-                    <WebBrowser x:Name="Browser" Visibility="Visible" Margin="10"
-                                Source="http://api.joduska.me/public/news/html" Grid.ColumnSpan="2" />
+                    <WebBrowser x:Name="Browser" Visibility="Visible" Margin="10" Grid.ColumnSpan="2" />
                 </Grid>
             </TabItem>
             <TabItem x:Name="AssembliesTabItem" Header="Assemblies" Height="36" VerticalAlignment="Top">
