--- a/Views/InstallerWindow.xaml
+++ b/Views/InstallerWindow.xaml
@@ -73,7 +73,7 @@
                             Width="75" Height="25" VerticalAlignment="Bottom" Click="SelectAllButton_Click" />
                     <Button Content="{DynamicResource DeselectAll}" HorizontalAlignment="Left" Margin="90,0,0,10"
                             Width="86" Height="25" VerticalAlignment="Bottom" Click="UnselectAllButton_Click" />
-                    <TextBox HorizontalAlignment="Left" Height="23" Margin="10,10,0,0" TextWrapping="Wrap"
+                    <TextBox x:Name="search" HorizontalAlignment="Left" Height="23" Margin="10,10,0,0" TextWrapping="Wrap"
                              VerticalAlignment="Top" Width="135" TextChanged="TextBoxBase_OnTextChanged" />
                 </Grid>
             </TabItem>
